fixed issue with imageBoard component overlapping footer

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -20,5 +20,5 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  align-items: center;
+  height: fit-content;
 }
